# hello_zproto

./: .hgignore  configure.ac
doc/: Makefile.am  asciidoc.conf  hello_zproto.txt  hello_zproto_msg.txt
include/: citizen_msg.h  citizen_server.h  hello_zproto.h  hello_zproto_msg.h
src/: Makefile.am  citizen_msg.bnf  citizen_msg.c  citizen_msg.xml  citizen_server.c  citizen_server.xml  citizen_server_engine.inc  hello_zproto_msg.bnf  hello_zproto_msg.c  hello_zproto_msg.xml  hello_zproto_selftest.c  selftest
